src/rules/snapshots/pg_migration_lint__rules__pgm205__tests__drop_schema_cascade_with_known_tables_lists_them.snap
---
source: src/rules/pgm205.rs
expression: findings
---
- rule_id: PGM205
  severity: Critical
  message: "DROP SCHEMA 'myschema' CASCADE drops every object in the schema — tables, views, sequences, functions, and types. This is irreversible. Known affected tables: myschema.customers, myschema.orders."
  file: migrations/016.sql
  start_line: 1
  end_line: 1
